--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chroma-js": "^2.0.6",
+    "p5": "^0.9.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2"
+    "react-p5-wrapper": "^2.0.0",
+    "react-scripts": "3.1.2",
+    "react-select": "^3.0.5",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
