--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "deploy": "react-scripts build; firebase deploy",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
